fix dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,7 @@
     --square-selected-border: #6200ea;
 }
 
-.dark-mode {
+.dark-theme {
     --background-color: #1a1a1a;
     --text-color: #f0f0f0;
     --title-color: #b388ff;
